--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "@supabase/supabase-js": "^2.46.1",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
